--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Disparando ❤️ con Sandreke</title>
+  <title>AMOR ❤️ A MICA</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
@@ -63,7 +63,7 @@
   </style>
 </head>
 <body>
-  <h1>Disparando ❤️ con Sandreke</h1>
+  <h1>Dandole Amor ❤️ a Micaela</h1>
 
   <button id="startBtn">Comenzar</button>
 
